Fix jumping left-nav bullet
Still not entirely sure what was up, but <a>'s were only position:
relative if selected, and perhaps they were somehow becoming unselected
on click (maybe due to center-selector script running wild)

--- a/wp-content/themes/Revera/theme.css
+++ b/wp-content/themes/Revera/theme.css
@@ -1083,7 +1083,7 @@ h3.bothead{
 	}
 }
 
-span.center-nav-selected-child a,
+.left-nav-menu span a,
 span.left-nav-selected-child a{
 	position: relative;	
 }
